# pocketkv

./: README.md  pyproject.toml
src/pocketkv/: main.py
