[project]
name = "pocketkv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebastien Waegeneire", email = "sebastien@waegeneire.com" },
]
requires-python = ">=3.13"
dependencies = ["loguru>=0.7.3"]

[project.scripts]
pocketkv = "pocketkv.main:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
